--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,16 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 
+  /*Verificarea footerului*/
+
   /* border: 1px solid #e7e9fc; */
   /* border-top: none; */
 }
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: cu valorile 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .cls {
@@ -104,10 +108,18 @@ body {
 
 .link:hover {
   color: #404bbf;
+
+  /*La hover, în clasa link-ului, a fost atribuit stilul background-color: #31d0aa pentru a schimba culoarea de fundal la trecerea cu mouse-ul peste link*/
+
+  background-color: #31d0aa;
 }
 
 .link:focus {
   color: #404bbf;
+
+  /*La focalizare, în clasa link-ului, a fost atribuit stilul background-color: #31d0aa pentru a schimba culoarea de fundal la click pe link*/
+
+  background-color: #31d0aa;
 }
 
 /*logo-list-primul element al listei*/
@@ -182,6 +194,16 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+
+  /*În clasa link-ului a fost atribuit stilul width: 100% pentru a specifica lățimea elementului la 100% din lățimea containerului părinte*/
+
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  align-items: center;
 }
 
 .span-header {
@@ -256,7 +278,18 @@ body {
 .first-section {
   background-color: #2e2f42;
   padding: 188px 0;
-  border: 2px solid red;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/imgame-name.jpeg);
+
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  /* border: 2px solid red; */
 }
 
 .title-section {
@@ -308,6 +341,16 @@ body {
   padding: 120px 0;
 }
 
+.second-section-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
 .fist-app {
   font-weight: 500;
   font-size: 20px;
@@ -331,6 +374,11 @@ body {
   color: #ffffffff;
   background-color: #404bbf;
   border: 1px solid transparent;
+
+  /*La hover, pentru primul buton al listei de filtre a fost atribuit stilul box-shadow: cu valorile 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); pentru a specifica umbra elementului la trecerea cu mouse-ul peste buton*/
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .third-section-list {
@@ -343,6 +391,12 @@ body {
   color: #ffffffff;
   background-color: #404bbf;
   border: 1px solid transparent;
+
+  /*
+La focalizare, pentru primul buton al listei de filtre a fost atribuit stilul box-shadow: cu valorile 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); pentru a specifica umbra elementului la click pe buton*/
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .ftr {
@@ -527,4 +581,29 @@ img {
 
 .one {
   width: calc((100%-48px) / 3);
+}
+
+.container-footer {
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
+}
+
+.socialmedia {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffffff;
+  margin-bottom: 16px;
+}
+
+.socialmedia-list {
+  display: flex;
+  gap: 16px;
+}
+
+.socialmedia-list-two {
+  width: 40px;
+  height: 40px;
 }
