--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,7 @@ body {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .cls {
@@ -102,6 +101,8 @@ body {
 
 .link {
   text-decoration: none;
+  display: block;
+
   /* padding: 32px 16px;
   border: 5px solid green; */
 }
