--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,10 @@ body {
   width: 100%;
   min-width: 264px;
   gap: 24px;
+
+  /*În clasa primului element al listei echipei a fost atribuit stilul box-shadow: cu valorile 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); pentru a specifica umbra elementului*/
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .email {
@@ -607,4 +611,73 @@ img {
 .socialmedia-list-two {
   width: 40px;
   height: 40px;
+}
+
+.index {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.index-media {
+  width: 40px;
+  height: 40px;
+}
+
+.medialinks {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.medialinks:hover {
+  background-color: #404bbf;
+}
+
+.medialinks:focus {
+  background-color: #404bbf;
+}
+
+.customer-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.title-customers {
+  font-size: 36px;
+  line-height: 1.11;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.list-customers {
+  display: flex;
+  gap: 24px;
+  height: 88px;
+}
+
+.list-item-customers {
+  width: calc((100% - 120px) / 6);
+}
+
+.customers-links {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #8e8f99;
+}
+
+.customers-links:hover {
+  border-color: #404bbf;
+}
+
+.customers-links:focus {
+  color: #404bbf;
 }
