--- a/css/styles.css
+++ b/css/styles.css
@@ -254,18 +254,16 @@ body {
   color: #434455;
 }
 
-.index {
+.social-media {
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+
+.index-media {
   width: 40px;
   height: 40px;
 }
-
-/* .index-media {
-  width: 40px;
-  height: 40px;
-} */
 
 .email {
   font-size: 16px;
