--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,19 @@
 :root {
-  --culoare-primara: #42a5f5;
-  --culoare-secundara: #ff1744;
+  --main-color-white: white;
+  --text-color-navy: #2e2f42;
+  --text-color-slate: #434455;
+  --text-color-cloud: #f4f4fd;
+  --text-color-logo: #4d5ae5;
+  --background-color: #2e2f42;
+  --button-hover-color: #404bbf;
+  --logo-font-family: "Raleway", sans-serif;
+  --text-font-family: "Roboto", sans-serif;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  color: #434455;
-  background-color: #ffffffff;
+  font-family: var(--text-font-family);
+  background-color: var(--main-color-white);
+  color: var(--text-color-slate);
 }
 
 /*HEADER*/
@@ -15,16 +22,10 @@ body {
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
-
-  /*Verificarea footerului*/
-
-  /* border: 1px solid #e7e9fc; */
-  /* border-top: none; */
 }
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .cls {
@@ -80,15 +81,7 @@ body {
 
   margin-bottom: 16px;
   display: inline-block;
-}
-
-.webstudio {
-  text-decoration: none;
-  display: block;
-  border: 5px dotted yellow;
-
-  /* padding: 32px 16px;
-  border: 5px solid green; */
+  border: 2px solid red;
 }
 
 .link:hover {
@@ -130,17 +123,14 @@ body {
 }
 
 .email-one {
-  border: 2px solid green;
   margin-right: 40px;
 }
 
 .email-two {
-  border: 2px solid yellow;
   margin-right: 0;
 }
 
 .list-address {
-  border: 2px solid red;
   display: flex;
   gap: 40px;
 }
@@ -194,10 +184,6 @@ body {
   border: 2px solid red;
   margin-right: 40px;
 } */
-
-.address {
-  font-style: normal;
-}
 
 .contact-list {
   font-style: normal;
@@ -274,8 +260,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
-  /* border: 2px solid red; */
 }
 
 .title-section {
@@ -377,41 +361,10 @@ La focalizare, pentru primul buton al listei de filtre a fost atribuit stilul bo
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.ftr {
-  background: var(--NAVY-BLUE, #2e2f42);
-  padding: 100px 0;
-}
-
-/*FOOTER*/
-
-.lgo.sec {
-  display: inline-block;
-  margin-bottom: 16px;
-  border: 5px dotted blue;
-  width: 100%;
-  height: 100%;
-}
-
-/* .lgo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-} */
-
 img {
   display: block;
   border: 2px solid red;
 }
-
-/* .lgo-link {
-  display: inline-block;
-  margin-bottom: 16px;
-  border: 10px dotted green;
-} */
 
 .visually-hidden {
   position: absolute;
@@ -426,38 +379,8 @@ img {
   overflow: hidden;
 }
 
-.span-footer {
-  color: var(--CLOUD, #f4f4fd);
-  font-family: Raleway;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: 21px; /* 116.667% */
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-}
-
 .span-header {
   color: #2e2f42;
-}
-
-.span-footer {
-  color: var(--CLOUD, #f4f4fd);
-  font-family: Raleway;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: 21px; /* 116.667% */
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-}
-
-.logo-footer-link {
-  line-height: 1.5;
-  color: #f4f4fd;
-  letter-spacing: 0.02em;
-  max-width: 264px;
-  border: 5px solid red;
 }
 
 .logo-link:hover {
@@ -470,10 +393,6 @@ img {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   border: 2px solid black;
-}
-
-.address {
-  font-style: normal;
 }
 
 .button-first-section {
@@ -523,17 +442,19 @@ img {
 }
 
 .title-first-section {
-  max-width: 496px;
-  color: var(--WHITE, #fff);
-  text-align: center;
+  width: 496px;
 
-  /* Header 1 */
+  color: var(--WHITE, #fff);
+
   font-family: Roboto;
   font-size: 56px;
   font-style: normal;
   font-weight: 700;
   line-height: 60px; /* 107.143% */
   letter-spacing: 1.12px;
+  margin-left: 0;
+  margin-right: 0;
+  border: 2px solid;
 }
 
 .list-buttons {
@@ -570,8 +491,224 @@ img {
   border: 2px dotted black;
 }
 
-.container-footer {
+.logo-footer-link {
+  color: var(--CLOUD, #f4f4fd);
+
+  /* Body */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
+  line-height: 1.5;
+  color: #f4f4fd;
+  letter-spacing: 0.02em;
+  max-width: 264px;
+}
+
+/*FOOTER*/
+
+.footer-class {
+  background: var(--NAVY-BLUE, #2e2f42);
+  padding: 100px 0;
+}
+
+.logo-footer {
+  color: var(--IRIS, #4d5ae5);
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 21px; /* 116.667% */
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+
+  text-decoration: none;
+}
+
+.span-footer {
+  color: var(--CLOUD, #f4f4fd);
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 21px; /* 116.667% */
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+
+.paragraph-social-media {
+  color: var(--WHITE, #fff);
+
+  /* Body Medium */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
+}
+
+/*  CUSTOMERS- SECTION*/
+
+.five-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.title-five-section {
+  font-size: 36px;
+  line-height: 1.11;
+  color: #2e2f42;
+  margin-bottom: 72px;
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+
+  /* Header 2 */
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 111.111% */
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+
+.customers-six-cards {
   display: flex;
-  align-items: baseline;
-  margin-right: 120px;
+  gap: 24px;
+  height: 88px;
+}
+
+.customers-list-six-card {
+  fill: #42a5f5;
+}
+
+.link {
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--list-color);
+}
+
+.link:hover {
+  color: #404bbf;
+}
+.link:focus {
+  color: #404bbf;
+}
+
+.list {
+  list-style: none;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header-div {
+  display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-link {
+  color: var(--text-color-navy);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 0.32px;
+  padding: 24px 0;
+}
+
+.nav-link:hover .nav-link:focus {
+  color: var(--button-hover-color);
+}
+
+.nav-menu {
+  display: flex;
+  gap: 40px;
+}
+
+.logo-link {
+  color: var(--text-color-logo);
+  font-family: var(--logo-font-family);
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  margin-right: 76px;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+.logo-second-word {
+  color: var(--text-color-navy);
+}
+
+.address {
+  color: var(--text-color-slate);
+  font-size: 16px;
+  font-style: normal;
+  line-height: 150%;
+  letter-spacing: 0.32px;
+}
+
+.address-list {
+  display: flex;
+  gap: 40px;
+}
+
+.address:hover .address:focus {
+  color: var(--text-color-cloud);
+}
+
+.icons-customers {
+  width: 104px;
+  height: 56px;
+  flex-shrink: 0;
+  margin-left: 30px;
+}
+
+.list-customers {
+  list-style: none;
+  padding: 24px;
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.icons-list {
+  width: 168px;
+  height: 88px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  display: flex;
+  align-items: center;
+}
+
+.icons-list-forth {
+  width: 168px;
+  height: 88px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  display: flex;
+  align-items: center;
 }
