--- a/css/styles.css
+++ b/css/styles.css
@@ -14,18 +14,21 @@ body {
   font-family: var(--text-font-family);
   background-color: var(--main-color-white);
   color: var(--text-color-slate);
+  margin: 0;
+  padding: 0;
 }
 
 /*HEADER*/
 
 .container {
-  width: 1158px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 15px;
 }
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  width: 1440px;
 }
 
 .cls {
@@ -180,11 +183,6 @@ body {
   text-transform: uppercase;
 }
 
-/* .item {
-  border: 2px solid red;
-  margin-right: 40px;
-} */
-
 .contact-list {
   font-style: normal;
   list-style: none;
@@ -216,10 +214,13 @@ body {
   min-width: 264px;
   gap: 24px;
 
-  /*În clasa primului element al listei echipei a fost atribuit stilul box-shadow: cu valorile 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); pentru a specifica umbra elementului*/
-
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .container-forth {
@@ -233,11 +234,13 @@ body {
 }
 
 .paragraph-second-section {
-  text-align: center;
+  /* Body */
+  font-family: Roboto;
   font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
 }
 
 .email {
@@ -250,16 +253,8 @@ body {
 .first-section {
   background-color: #2e2f42;
   padding: 188px 0;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/imgame-name.jpeg);
 
-  max-width: 1440px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  width: 100%;
 }
 
 .title-section {
@@ -356,14 +351,23 @@ body {
 
   /*
 La focalizare, pentru primul buton al listei de filtre a fost atribuit stilul box-shadow: cu valorile 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); pentru a specifica umbra elementului la click pe buton*/
-
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 img {
   display: block;
-  border: 2px solid red;
+}
+
+.paragraph-second-section-forth {
+  color: var(--SLATE, #434455);
+  text-align: center;
+
+  /* Body */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
 }
 
 .visually-hidden {
@@ -377,6 +381,20 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.subtitle {
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+
+  /* Header 2 */
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 111.111% */
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
 }
 
 .span-header {
@@ -412,6 +430,8 @@ img {
   font-weight: 500;
   line-height: 24px; /* 150% */
   letter-spacing: 0.64px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button-first-section:hover {
@@ -442,19 +462,14 @@ img {
 }
 
 .title-first-section {
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  color: #ffffff;
   width: 496px;
 
-  color: var(--WHITE, #fff);
-
-  font-family: Roboto;
-  font-size: 56px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 60px; /* 107.143% */
-  letter-spacing: 1.12px;
-  margin-left: 0;
-  margin-right: 0;
-  border: 2px solid;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .list-buttons {
@@ -501,10 +516,8 @@ img {
   font-weight: 400;
   line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
-  line-height: 1.5;
-  color: #f4f4fd;
-  letter-spacing: 0.02em;
-  max-width: 264px;
+  width: 264px;
+  margin-left: 156px;
 }
 
 /*FOOTER*/
@@ -512,6 +525,9 @@ img {
 .footer-class {
   background: var(--NAVY-BLUE, #2e2f42);
   padding: 100px 0;
+  margin: 0;
+
+  border: 2px solid red;
 }
 
 .logo-footer {
@@ -525,6 +541,7 @@ img {
   text-transform: uppercase;
 
   text-decoration: none;
+  margin-left: 156px;
 }
 
 .span-footer {
@@ -691,6 +708,9 @@ img {
   display: inline-flex;
   align-items: flex-start;
   gap: 24px;
+
+  padding-left: 156px;
+  padding-right: 156px;
 }
 
 .icons-list {
@@ -711,4 +731,40 @@ img {
   border: 1px solid #8e8f99;
   display: flex;
   align-items: center;
+}
+
+/*Forth Section*/
+
+.forth-social-media {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.forth-icons {
+  height: 40px;
+  width: 40px;
+  list-style-type: none;
+}
+
+.link-icons {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: Center;
+}
+
+.link-icons:hover {
+  background-color: #404bbf;
+}
+
+.link-icons:focus {
+  background-color: #404bbf;
+}
+
+.svg-class {
+  fill: #f4f4fd;
 }
