--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --main-color-white: white;
   --text-color-navy: #2e2f42;
@@ -29,8 +34,7 @@ body {
 .header {
   border-bottom: 1px solid #e7e9fc;
   width: 1440px;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .cls {
@@ -402,7 +406,7 @@ img {
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
-  line-height: 40px; /* 111.111% */
+  line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
   margin-bottom: 72px;
@@ -795,6 +799,14 @@ img {
   align-items: center;
   justify-content: center;
   color: #8e8f99;
+}
+
+.link-customers-five-section:hover {
+  border-color: #404bbf;
+}
+
+.link-customers-five-section:focus {
+  color: #404bbf;
 }
 
 /*FOOTER*/
