--- a/css/styles.css
+++ b/css/styles.css
@@ -229,10 +229,10 @@ body {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.container-forth {
+/* .container-forth {
   padding-top: 32px;
   padding-bottom: 32px;
-}
+} */
 
 .title-second-section {
   margin-bottom: 8px;
@@ -834,6 +834,7 @@ img {
 .listaa {
   width: 40px;
   height: 40px;
+  list-style-type: none;
 }
 
 .link-footer {
@@ -844,4 +845,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.logo-and-paragraph {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  margin-right: 120px;
 }
