--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,9 @@ body {
   border-bottom: 1px;
   border-bottom: 1px solid #ffffff;
   display: flex;
-  justify-content: space-between;
-  border: 2px solid red;
+
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-section {
@@ -838,7 +839,7 @@ img {
   background-color: #31d0aa;
 }
 
-.link-footer:hover {
+.link-footer:focus {
   background-color: #31d0aa;
 }
 
@@ -846,4 +847,12 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   margin-right: 120px;
+}
+
+.our-team-icons {
+  fill: #f4f4fd;
+}
+
+.last-icons {
+  fill: #f4f4f4fd;
 }
