--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-div {
@@ -381,6 +382,7 @@ img {
 
 .portfolio-link {
   width: calc((100%-48px) / 3);
+  display:block;
 }
 
 .portfolio-link-div {
@@ -474,7 +476,7 @@ img {
   letter-spacing: 0.32px;
   width: 264px;
   margin-left: 156px;
-  
+
 }
 
 .p-social-media {
