--- a/css/styles.css
+++ b/css/styles.css
@@ -204,9 +204,11 @@ ul {
 
 .link-customers-five-section:hover {
   color: #404bbf;
+  border-color: #404bbf;
 }
 
 .link-customers-five-section:focus {
+  color: #404bbf ;
   border-color: #404bbf;
 }
 
@@ -276,7 +278,7 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-div {
@@ -397,7 +399,9 @@ img {
 
 
 .portfolio-link:focus{
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+
 }
 
 
@@ -505,6 +509,15 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.link-footer:hover,
+.link-footer:focus{
+
+  background-color: #31d0aa;
+
+  
+
 }
 
 .filter-section {
