--- a/css/styles.css
+++ b/css/styles.css
@@ -159,13 +159,13 @@ ul {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
 
-  font-family: Roboto;
+  /* font-family: Roboto; */
   font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
+  /* font-style: normal; */
+  /* font-weight: 700; */
   line-height: 1.11;
-  letter-spacing: 0.72px;
-  text-transform: capitalize;
+  /* letter-spacing: 0.72px; */
+  /* text-transform: capitalize; */
   margin-bottom: 72px;
 }
 
@@ -187,8 +187,8 @@ ul {
 
   gap: 24px;
 
-  padding-right: 156px;
-  height: 88px;
+  /* padding-right: 156px; */
+  /* height: 88px; */
 }
 
 .link-customers-five-section {
@@ -488,6 +488,7 @@ img {
   letter-spacing: 0.02em;
   color: #ffffffff;
   margin-bottom: 16px;
+  /* font-style: normal; */
 }
 
 .footer-list {
