--- a/css/styles.css
+++ b/css/styles.css
@@ -155,18 +155,27 @@ ul {
   padding-bottom: 120px;
 }
 
-.subtitle {
-  color: var(--NAVY-BLUE, #2e2f42);
-  text-align: center;
 
-  /* font-family: Roboto; */
+
+.list-customers {
+  list-style: none;
+  padding: 24px;
+  display: flex;
+
+  gap: 24px;
+
+  /* padding-right: 156px; */
+  /* height: 88px; */
+}
+
+
+.subtitle {
+
   font-size: 36px;
-  /* font-style: normal; */
-  /* font-weight: 700; */
   line-height: 1.11;
-  /* letter-spacing: 0.72px; */
-  /* text-transform: capitalize; */
+  color: var(--NAVY-BLUE, #2e2f42);
   margin-bottom: 72px;
+  text-align: center;
 }
 
 .icons-list {
@@ -180,16 +189,7 @@ ul {
   fill: currentColor;
 }
 
-.list-customers {
-  list-style: none;
-  padding: 24px;
-  display: flex;
 
-  gap: 24px;
-
-  /* padding-right: 156px; */
-  /* height: 88px; */
-}
 
 .link-customers-five-section {
   width: 100%;
@@ -482,13 +482,17 @@ img {
 }
 
 .p-social-media {
+
+  margin-bottom: 16px;
+  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffffff;
-  margin-bottom: 16px;
-  /* font-style: normal; */
+  font-style: normal;
+  
+  
 }
 
 .footer-list {
