--- a/css/styles.css
+++ b/css/styles.css
@@ -480,24 +480,29 @@ img {
 .container-footer {
   display: flex;
   align-items: baseline;
-  margin-right: 120px;
+  /* margin-right: 120px; */
 }
 
 .logo-and-paragraph {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  /* padding-top: 32px;
+  padding-bottom: 32px; */
   margin-right: 120px;
 }
 
 .span-footer {
   color: var(--CLOUD, #f4f4fd);
-  font-family: Raleway;
+
+
+  /* font-family: Raleway;
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
   line-height: 21px; /* 116.667% */
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
+
+
+
+  /* letter-spacing: 0.54px;
+  text-transform: uppercase; */ 
 }
 
 .logo-footer {
@@ -516,20 +521,22 @@ img {
 
 .last-icons {
   fill: #f4f4f4fd;
+  width: 24px;
+  height: 24px;
 }
 
 .logo-footer-link {
   color: var(--CLOUD, #f4f4fd);
 
   /* Body */
-  font-family: Roboto;
+  /* font-family: Roboto; */
   font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
+  /* font-style: normal; */
+  /* font-weight: 400; */
+  line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
-  width: 264px;
-  margin-left: 156px;
+  max-width: 264px;
+  /* margin-left: 156px; */
 
 }
 
@@ -549,6 +556,7 @@ img {
 
 .footer-list {
   display: flex;
+  /* justify-content: center; */
   gap: 16px;
 }
 
