--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,10 @@ ul {
   text-align: center;
 }
 
+
+
+
+
 .icons-list {
   width: 168px;
   height: 88px;
@@ -544,7 +548,7 @@ img {
 
 .p-social-media {
 
-  margin-bottom: 16px;
+  margin-bottom: 0;
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
