--- a/css/styles.css
+++ b/css/styles.css
@@ -549,7 +549,7 @@ img {
 
 .p-social-media {
 
-  margin: 0;
+  /* margin: 0; */
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -559,6 +559,11 @@ img {
   font-style: normal;
   
   
+}
+
+
+.p-social-media{
+  margin:0;
 }
 
 
