--- a/css/styles.css
+++ b/css/styles.css
@@ -549,22 +549,22 @@ img {
 
 .p-social-media {
 
-  /* margin: 0; */
-  font-family: Roboto;
+  margin: 0;
+  /* font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffffff;
-  font-style: normal;
+  font-style: normal; */
   
   
 }
 
-
+/* 
 .p-social-media{
   margin:0;
-}
+} */
 
 
 
