--- a/css/styles.css
+++ b/css/styles.css
@@ -549,22 +549,19 @@ img {
 
 .p-social-media {
 
-  margin: 0;
-  /* font-family: Roboto;
+  margin-bottom: 16px;
+  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #ffffffff;
-  font-style: normal; */
+  color: var(--main-color-white--);
+  font-style: normal;
   
   
 }
 
-/* 
-.p-social-media{
-  margin:0;
-} */
+
 
 
 
