--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--main-color-white--);
+  color: #ffffffff;
   font-style: normal;
   
   
