--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,13 @@ body {
 }
 
 
+h2 {
+  margin: 0;
+}
+
+
 p{
-  margin:0;
+  margin: 0;
   
 }
 
@@ -318,7 +323,7 @@ ul {
 
 .list-customers {
   list-style: none;
-  padding: 24px;
+  /* padding: 24px; */
   display: flex;
 
   gap: 24px;
@@ -332,8 +337,8 @@ ul {
   font-size: 36px;
   line-height: 1.11;
   color: var(--NAVY-BLUE, #2e2f42);
-  /* margin-bottom: 72px; */
-  margin: 0;
+  margin-bottom: 72px;
+  
   text-align: center;
 }
 
@@ -344,14 +349,22 @@ ul {
 .icons-list {
   width: 168px;
   height: 88px;
-  flex-shrink: 0;
+  /* flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #8e8f99;
   display: flex;
   align-items: center;
-  fill: currentColor;
+  fill: currentColor; */
 }
 
+.icons-list-svg {
+
+  width: 104px;
+  height: 56px;
+  fill: currentColor;
+
+
+}
 
 
 .link-customers-five-section {
@@ -363,7 +376,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #8e8f99;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 .link-customers-five-section:hover {
